<resources>
    <string name="app_name">CSTAcademy2025UniBucIF</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="click_me">Click Me</string>

    <string name="type_north">North</string>
    <string name="type_south">South</string>
    <string name="type_east">East</string>
    <string name="type_west">West</string>
    <string name="type_unknown">Unknown</string>

    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="go_to_register">Go To Register</string>
    <string name="hint_email">Add your Email here</string>

    <string name="descr_north">This is north</string>
    <string name="descr_south">This is south</string>
    <string name="descr_east">This is east</string>
    <string name="descr_west">This is west</string>
    <string name="descr_unknown">Unknown direction</string>

    <string name="add_city">Add city</string>
    <string name="add_direction">Add direction</string>
    <string name="get_all">Get all</string>
    <string name="add_your_password_here">Add your password here</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_password">Invalid password</string>
    <string name="user_avatar">User avatar</string>
    <string name="to_users">To users</string>
    <string name="to_directions">To directions</string>
    <string name="logout">Logout</string>
</resources>