<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.cst.cstacademy2025unibucif.ui.login.LoginViewModel" />
        <variable
            name="listener"
            type="com.cst.cstacademy2025unibucif.ui.login.LoginListener" />
        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/lly_actions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/log_in" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_email"
                android:text="@={viewModel.email}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:hint="@string/hint_email" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_email"
                android:textColor="@color/red"
                android:visibility="@{viewModel.isEmailError ? View.VISIBLE : View.GONE, default = gone}"
                tools:visibility="visible" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_password"
                android:text="@={viewModel.password}"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:hint="@string/add_your_password_here" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invalid_password"
                android:textColor="@color/red"
                android:visibility="@{viewModel.isPasswordError ? View.VISIBLE : View.GONE, default = gone}"
                tools:visibility="visible" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lly_actions"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_space"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <Button
                android:id="@+id/btn_login"
                android:onClick="@{() -> viewModel.doLogin(viewModel.email, viewModel.password)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in" />

            <TextView
                android:id="@+id/tv_register"
                android:onClick="@{() -> listener.goToRegisterFragment(viewModel.email)}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_space"
                android:gravity="center"
                android:text="@string/go_to_register" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>